--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,8 +59,8 @@
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand"> Moletom Masc</h2>
-                    <p class="product-short-des">Conjunto</p>
+                    <h2 class="product-brand"> Moletom Clothing</h2>
+                    <p class="product-short-des">Conjunto Masc</p>
                     <span class="price">R$224,00</span><span class="actual-price">R$56,00</span>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Vestido </h2>
+                    <h2 class="product-brand">Vestido daslu </h2>
                     <p class="product-short-des">Vestido Festa</p>
                     <span class="price">R$196</span><span class="actual-price">R$84,00</span>
                 </div>
@@ -107,8 +107,8 @@
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Camisa black</h2>
-                    <p class="product-short-des">camisa social </p>
+                    <h2 class="product-brand">Camisa Clothing</h2>
+                    <p class="product-short-des">camisa social black </p>
                     <span class="price">R$161,50</span><span class="actual-price">R$28,50</span>
                 </div>
             </div>
@@ -119,8 +119,8 @@
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Kit Man</h2>
-                    <p class="product-short-des">Camisa ,calça</p>
+                    <h2 class="product-brand">Clothing</h2>
+                    <p class="product-short-des">kit Camisa/ Calça</p>
                     <span class="price">R$270,00</span><span class="actual-price">R$30,00</span>
                 </div>
             </div>
@@ -158,7 +158,7 @@
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Camiseta Calvin</h2>
+                    <h2 class="product-brand"> Calvin Klein</h2>
                     <p class="product-short-des">camiseta masc verde</p>
                     <span class="price">R$135,00</span><span class="actual-price">R$15,00</span>
                 </div>
@@ -170,8 +170,8 @@
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Camiseta Fem</h2>
-                    <p class="product-short-des">camiseta Faces</p>
+                    <h2 class="product-brand">Hering Faces</h2>
+                    <p class="product-short-des">camiseta feminina</p>
                     <span class="price">R$96,00</span><span class="actual-price">R$24,00</span>
                 </div>
             </div>
@@ -182,8 +182,8 @@
                     <button class="card-btn">adicionar à lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Camiseta Fem </h2>
-                    <p class="product-short-des">Feminino </p>
+                    <h2 class="product-brand">Clothing Basic </h2>
+                    <p class="product-short-des">Camiseta Feminina </p>
                     <span class="price">R$96,00</span><span class="actual-price">R$24,00</span>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">camisa Clothing</h2>
+                    <h2 class="product-brand">Clothing Premium</h2>
                     <p class="product-short-des">camisa feminina </p>
                     <span class="price">R$180</span><span class="actual-price">R$20</span>
                 </div>
@@ -206,8 +206,8 @@
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Camiseta Kids</h2>
-                    <p class="product-short-des">Camiseta masc </p>
+                    <h2 class="product-brand">Clothing Kids</h2>
+                    <p class="product-short-des">Camiseta infantil masc </p>
                     <span class="price">R$85,00</span><span class="actual-price">R$15,00</span>
                 </div>
             </div>
@@ -218,7 +218,7 @@
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Camiseta Kids</h2>
+                    <h2 class="product-brand">Clothing Kids</h2>
                     <p class="product-short-des">Camiseta Fem </p>
                     <span class="price">R$85,00</span><span class="actual-price">R$15,00</span>
                 </div>
@@ -230,8 +230,8 @@
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Bermuda Sta Cruz</h2>
-                    <p class="product-short-des">bermuda preta.</p>
+                    <h2 class="product-brand">Clothing Surf</h2>
+                    <p class="product-short-des">Bermuda </p>
                     <span class="price">R$80,00</span><span class="actual-price">R$20,00</span>
                 </div>
             </div>
@@ -242,8 +242,8 @@
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">boné Bronx</h2>
-                    <p class="product-short-des">boné cinza</p>
+                    <h2 class="product-brand">Bronx</h2>
+                    <p class="product-short-des">Boné cinza</p>
                     <span class="price">R$180</span><span class="actual-price">R$20,00</span>
                 </div>
             </div>
@@ -264,8 +264,8 @@
                     <button class="card-btn">adicionar  á lista de desejos</button>
                 </div>
                 <div class="product-info">
-                    <h2 class="product-brand">Nike Shoes lx</h2>
-                    <p class="product-short-des">Run Black</p>
+                    <h2 class="product-brand">Nike Shoes Lx</h2>
+                    <p class="product-short-des">Tênis Running</p>
                     <span class="price">R$360,00</span><span class="actual-price">R$40</span>
                 </div>
             </div>
@@ -289,7 +289,7 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">Penauty</h2>
-                    <p class="product-short-des">Sporting Tênis</p>
+                    <p class="product-short-des">Tênis Sporting</p>
                     <span class="price">R$178,00</span><span class="actual-price">R$22</span>
                 </div>
             </div>
@@ -337,7 +337,7 @@
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">Nike Force58</h2>
-                    <p class="product-short-des">Tênis Nike Rosa</p>
+                    <p class="product-short-des">Tênis Training </p>
                     <span class="price">R$665,00</span><span class="actual-price">R$35,00</span>
                 </div>
             </div>
