--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -22,11 +22,11 @@
     <div class="container">
         <img src="img/dark-logo.png" class="logo" alt="">
         <div>
-            <input type="text" autocomplete="off" id="nome" placeholder="nome">
+            <input type="text" autocomplete="off" id="name" placeholder="nome">
             <input type="email" autocomplete="off" id="email" placeholder="email">
             <input type="password" autocomplete="off" id="password" 
             placeholder="senha">
-            <input type="text" autocomplete="off" id="numero" placeholder="numero">
+            <input type="text" autocomplete="off" id="number" placeholder="numero telefone">
             <input type="checkbox" checked class="checkbox" id="terms-and-cond">
             <label for="terms-and-cond">Concorda com os nossos <a href="">termos e 
             condições</a></label><br>
