--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -29,7 +29,8 @@ body {
     margin: 0 auto 50px;
 }
 
-input:not(.search-box, .checkbox, .size-checkbox, input[type="file"]),
+input:not(.search-box, .checkbox, .size-checkbox,
+    input[type="file"]),
 textarea {
     display: block;
     width: 300px;
