configurado os models e integrado ao DB

--- a/Projeto-Clothing/views/cart.ejs
+++ b/Projeto-Clothing/views/cart.ejs
@@ -1,58 +1,60 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clothing: Cart</title>
+<!DOCTYPE html>
+<html lang="en">
 
-    <link rel="stylesheet"   href="css/home.css">
-    <link rel="stylesheet"   href="css/cart.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Clothing: Cart</title>
 
-  <body>
-    <nav class="navbar"></nav>
+  <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="css/cart.css">
+</head>
 
-    <div class="cart-section">
-       <div class="product-list"> 
-        <p class="section-heading">Seu Carrinho</p>
-          <div class="cart" >
-          <!--carrinho de produtos aqui-->
-         <!--<img src="img/carrinhoVazio.png" class="empty-img" alt="">-->
-           <!--<div class="sm-product">
-              <img src="img/productImage1.png " class ="sm-product-img" alt="">
-              <div class="sm-text">
-                <p class="sm-product-name">NIKE force58</p>
-                <p class="sm-des">este tênis </p>
-             </div>
- 
-             <div class="item-counter">
-              <button class="counter-btn decrement">-</button>
-              <p class="item-count">1</p>
-              <button class="counter-btn increment">+</button>
-             </div> 
-             <p class="sm-price">R$90,00</p> 
-             <button class="sm-delete-btn"><img src="img/close.png" alt="">/button>
-          </div> -->          
-        </div>
-        <p class="section-heading">Sua lista de desejos</p>
-        <div class="wishlist">
-        <!--lista desejos de produtos aqui!!!!--> 
-        </div>
-       </div>
-       <div class="checkout-section">
-          <div class="checkout-box">
-            <p class="text">total</p>
-            <h1 class="bill">R$0,00</h1>
-            <a href="/checkout" class="checkout-btn">finalizar</a>
+<body>
+  <nav class="navbar"></nav>
+
+  <div class="cart-section">
+    <div class="product-list">
+      <p class="section-heading"> Carrinho</p>
+      <div class="cart">
+        <!--carrinho de produtos aqui-->
+        <!--<img src="img/carrinhoVazio.png" class="empty-img" alt="">-->
+        <div class="sm-product">
+          <img src="img/productImage1.png " class="sm-product-img" alt="">
+          <div class="sm-text">
+            <p class="sm-product-name">Camiseta Calvin masculina</p>
+            <p class="sm-des">camiseta 100% algodão </p>
           </div>
-    </div>
-  </div> 
 
-    <footer></footer>
+          <div class="item-counter">
+            <button class="counter-btn decrement">-</button>
+            <p class="item-count">1</p>
+            <button class="counter-btn increment">+</button>
+          </div>
+          <p class="sm-price">R$135,00</p>
+          <button class="sm-delete-btn"><img src="img/close.png" alt=""></button>
+        </div>
+      </div>
+      <p class="section-heading">Sua lista de desejos</p>
+      <div class="wishlist">
+        <!--lista desejos de produtos aqui!!!!-->
+      </div>
+    </div>
+    <div class="checkout-section">
+      <div class="checkout-box">
+        <p class="text">total</p>
+        <h1 class="bill">R$0,00</h1>
+        <a href="/checkout" class="checkout-btn">finalizar</a>
+      </div>
+    </div>
+  </div>
+
+  <footer></footer>
   <script src="js/nav.js"></script>
   <script src="js/footer.js"></script>
   <script src="js/home.js"></script>
   <script src="js/cart.js"></script>
-  </body>
-  </html>
+</body>
+
+</html>
