--- a/Projeto-Clothing/public/css/cart.css
+++ b/Projeto-Clothing/public/css/cart.css
@@ -130,7 +130,8 @@
 
 .checkout-box {
     width: 100%;
-    height: 200px;
+    margin-top: 57px;
+    height: 180px;
     border-radius: 2px;
     border: 1px solid #d8d8d8;
     padding: 20px;
