--- a/Projeto-Clothing/views/checkout.ejs
+++ b/Projeto-Clothing/views/checkout.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,49 +11,53 @@
   <link rel="stylesheet" href="css/home.css">
   <link rel="stylesheet" href="css/cart.css">
   <link rel="stylesheet" href="css/checkout.css">
- 
+
 
 </head>
-<body> 
-   
-<nav class="navbar"></nav>
 
-<div class = "alert-box" >
-  <img src="img/error.png" class ="alert-img" alt="">
-<p class="alert-msg"></p>
-</div>
-<div class="form">
-  <h1 class="heading">Finalização de compras</h1>
-  <p class="text">Digite o endereço para entrega</p>
-  
-  <input type="text" id="Rua N°" placeholder="Rua:       ,N° ">
-  <input type="text" id="Bairro" placeholder="Bairro:">
-  <div class="three-input-container">
-    <input type="text" id="Cidade" placeholder="Cidade:">
-    <input type="text" id="CEP" placeholder="CEP:">
-  <input type="text" id="Estado" placeholder="Estado:">
+<body>
+
+  <nav class="navbar"></nav>
+
+  <div class="alert-box">
+    <img src="img/error.png" class="alert-img" alt="">
+    <p class="alert-msg"></p>
   </div>
-  <div class="cart-section">
-    <div class="product-list">
+  <div class="form">
+    <form action="/ckeckout" method="POST">
+      <h1 class="heading">Finalização de compras</h1>
+      <p class="text">Digite o endereço para entrega</p>
+
+      <input type="text" id="Rua N°" placeholder="Rua:       ,N° ">
+      <input type="text" id="Bairro" placeholder="Bairro:">
+      <div class="three-input-container">
+        <input type="text" id="Cidade" placeholder="Cidade:">
+        <input type="text" id="CEP" placeholder="CEP:">
+        <input type="text" id="Estado" placeholder="Estado:">
+      </div>
+    </form>
+    <div class="cart-section">
+      <div class="product-list">
         <p class="section-heading">Seu Carrinho</p>
         <div class="cart">
-            
+
         </div>
-    </div>
-    <div class="checkout-section">
+      </div>
+      <div class="checkout-section">
         <div class="checkout-box">
-            <p class="text">Sua fatura,</p>
-            <h1 class="bill">R$0,00</h1>
-            <button class="place-order-btn">Faça sua Compra</button>
+          <p class="text">Sua fatura,</p>
+          <h1 class="bill">R$0,00</h1>
+          <button class="place-order-btn">Faça sua Compra</button>
         </div>
 
-  
-</div>
+
+      </div>
 
 
-  <script src="js/home.js"></script>
-  <script src="js/cart.js"></script>
-  <script src="js/token.js"></script>
-  <script src="js/checkout.js"></script>
+      <script src="js/home.js"></script>
+      <script src="js/cart.js"></script>
+      <script src="js/token.js"></script>
+      <script src="js/checkout.js"></script>
 </body>
-</html>  
+
+</html>
