--- a/Projeto-Clothing/views/product.ejs
+++ b/Projeto-Clothing/views/product.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/product.css">
 </head>
+
 <body>
 
     <nav class="navbar"></nav>
@@ -30,17 +32,18 @@
             <span class="product-discount">( 10% off )</span>
 
             <p class="product-sub-heading">selecione o tamanho</p>
-         <div class="size-group">
-            <input type="radio" name="size" value="P" checked hidden id="s-size">
-            <label for="s-size" class="size-radio-btn check">P</label>
-            <input type="radio" name="size" value="m" hidden id="m-size">
-            <label for="m-size" class="size-radio-btn">m</label>
-            <input type="radio" name="size" value="G" hidden id="l-size">
-            <label for="l-size" class="size-radio-btn">g</label>
-          
-          </div>
+            <div class="size_group">
+                <input type="radio" name="size" value="P" checked hidden id="s-size">
+                <label for="s-size" class="size-radio-btn check">P</label>
+                <input type="radio" name="size" value="m" hidden id="m-size">
+                <label for="m-size" class="size-radio-btn">m</label>
+                <input type="radio" name="size" value="G" hidden id="l-size">
+                <label for="l-size" class="size-radio-btn">g</label>
 
-            <button class="btn cart-btn">Adicionar ao carrinho</button>
+            </div>
+
+            <button class="btn 
+            cart-btn">Adicionar ao carrinho</button>
             <button class="btn">adicionar a lista de desejos</button>
         </div>
     </section>
@@ -48,13 +51,20 @@
 
     <section class="detail-des">
         <h2 class="heading">descrição</h2>
-        <p class="des">Camisetas de manga curta são peças de roupa que nunca pode faltar, aqui na Clothing você encontra de modelos mais basícos e cores neutras à modelos estampados com cores vibrantes, tudo de acordo com o seu gosto e necessidade.
+        <p class="des">Camisetas de manga curta são peças de roupa que nunca pode faltar, aqui na Clothing você encontra
+            de modelos mais basícos e cores neutras à modelos estampados com cores vibrantes, tudo de acordo com o seu
+            gosto e necessidade.
 
-            As camisetas que oferecemos na Clothing  são de procedência garantida, original, das marcas mais renomadas do mundo de , como camisetas Vans, Element, Dc Shoes, Nike, Clothing Store, Nike, Santa Cruz, Daslu , Calvin Clain, Lacost, Dudalina, Volcom, Billabong, Creature, Diamond, Grizzly, Primitive, High Company e muito mais!
-            
-            Fique atento às modelagens e grade de tamanhos, se você tiver alguma dúvida do tamanho que se encaixa no seu estilo, entre em contato com a Cloting via WhatsApp.
-            
-            Trabalhamos com a linha de tamanhos tradicional P, M, G e GG. Linha Big 1GG, 2GG, 3GG e a linha infantil 08 ( P ), 10/12 ( M ), 14 ( G ) e 16 ( GG ).
+            As camisetas que oferecemos na Clothing são de procedência garantida, original, das marcas mais renomadas do
+            mundo de , como camisetas Vans, Element, Dc Shoes, Nike, Clothing Store, Nike, Santa Cruz, Daslu , Calvin
+            Clain, Lacost, Dudalina, Volcom, Billabong, Creature, Diamond, Grizzly, Primitive, High Company e muito
+            mais!
+
+            Fique atento às modelagens e grade de tamanhos, se você tiver alguma dúvida do tamanho que se encaixa no seu
+            estilo, entre em contato com a Cloting via WhatsApp.
+
+            Trabalhamos com a linha de tamanhos tradicional P, M, G e GG. Linha Big 1GG, 2GG, 3GG e a linha infantil 08
+            ( P ), 10/12 ( M ), 14 ( G ) e 16 ( GG ).
         </p>
     </section>
 
@@ -67,7 +77,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="/img/TSHIRT-THE-BATMAN-SCZ-MAEC366-SCZ-M-10051089528-C1.webp" class="product-thumb" alt="">
+                    <img src="/img/TSHIRT-THE-BATMAN-SCZ-MAEC366-SCZ-M-10051089528-C1.webp" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar a lista de desejos</button>
                 </div>
                 <div class="product-info">
@@ -79,7 +90,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="/img/JAQUETA-C-CAPUZ-DE-MOLETOM-MOLI-PTO-M-10051840679-C1.webp" class="product-thumb" alt="">
+                    <img src="/img/JAQUETA-C-CAPUZ-DE-MOLETOM-MOLI-PTO-M-10051840679-C1.webp" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar a lista de desejost</button>
                 </div>
                 <div class="product-info">
@@ -103,7 +115,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="/img/BERMUDA-C-BOLSO-CARGO-MASC-BRANCO-42-10051850883-C1.webp" class="product-thumb" alt="">
+                    <img src="/img/BERMUDA-C-BOLSO-CARGO-MASC-BRANCO-42-10051850883-C1.webp" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar a lista de desejos</button>
                 </div>
                 <div class="product-info">
@@ -115,7 +128,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="/img/RELOGIO-MASC-AVULSO-COPC32CZ-7D-DOU-10052073397-C1.webp" class="product-thumb" alt="">
+                    <img src="/img/RELOGIO-MASC-AVULSO-COPC32CZ-7D-DOU-10052073397-C1.webp" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar a lista de desejos</button>
                 </div>
                 <div class="product-info">
@@ -139,7 +153,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="/img/RELOGIO-MASC-AVULSO-MOLIFEAF-8V-VRD-10052072116-C1.webp" class="product-thumb" alt="">
+                    <img src="/img/RELOGIO-MASC-AVULSO-MOLIFEAF-8V-VRD-10052072116-C1.webp" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar a lista de desejos</button>
                 </div>
                 <div class="product-info">
@@ -185,7 +200,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">0,5% off</span>
-                    <img src="/img/tenis-nike-sb-force-58-premium-rosa-preto-branco-106255.jpeg" class="product-thumb" alt="">
+                    <img src="/img/tenis-nike-sb-force-58-premium-rosa-preto-branco-106255.jpeg" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar a lista de desejos</button>
                 </div>
                 <div class="product-info">
@@ -233,7 +249,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="/img/SHORTDOLL-MINNIE-ROSA-XADREZ-CP-ROS-6-10047920644-C1.webp" class="product-thumb" alt="">
+                    <img src="/img/SHORTDOLL-MINNIE-ROSA-XADREZ-CP-ROS-6-10047920644-C1.webp" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar a lista de desejos</button>
                 </div>
                 <div class="product-info">
@@ -276,6 +293,7 @@
     <script src="./js/footer.js"></script>
     <script src="./js/home.js"></script>
     <script src="./js/product.js"></script>
-    
+
 </body>
+
 </html>
