--- a/Projeto-Clothing/public/css/checkout.css
+++ b/Projeto-Clothing/public/css/checkout.css
@@ -39,3 +39,61 @@ body {
     font-weight: 500;
     margin: 10px 0;
 }
+
+@media (min-width:375px) and (max-width:767px) {
+    body {
+        width: 100%;
+        margin-left: 35px;
+    }
+}
+
+body {
+    display: block;
+    background: #fff;
+}
+
+.form {
+    width: 100%;
+    padding: 20px 10vw;
+}
+
+.heading {
+    text-transform: capitalize;
+    font-size: 500;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.form input {
+    background: #f5f5f5 !important;
+    width: 100% !important;
+}
+
+.three-input-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.three-input-container input {
+    margin: 0 !important;
+}
+
+#state {
+    margin: 0 20px !important;
+}
+
+
+.bill {
+    font-size: 28px;
+    font-weight: 500;
+    margin: 10px 0;
+}
+
+.checkout-box {
+    width: 32vw;
+    margin-top: 73px;
+    height: 129px;
+    border-radius: 2px;
+    border: 1px solid #d8d8d8;
+    padding: 10px;
+}
