--- a/Projeto-Clothing/views/login.ejs
+++ b/Projeto-Clothing/views/login.ejs
@@ -1,34 +1,38 @@
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<h1>, initial-scale=1.0">
-    <title>Clothing:Login</title>
-    <link rel="stylesheet" href="css/signup.css">
-  </head>
-  <body>
-    <img src="img/loader.gif" class="loader" alt="">
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="alert-box">
-        <img src="img/error.png" class="alert-img" alt="">
-        <p class="alert-msg">Error</p>
-    </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=<h1>, initial-scale=1.0">
+  <title>Clothing:Login</title>
+  <link rel="stylesheet" href="css/signup.css">
+</head>
 
-    <div class="container">
-      <img src="img/dark-logo.png" class="logo" alt="">
-      <div>
-          <input type="text" autocomplete="off" id="name" placeholder="nome">
-          <input type="email" autocomplete="off" id="email" placeholder="email">
-          <input type="password" autocomplete="off" id="password" 
-          placeholder="senha">
-          <button class="submit-btn">Login</button>
-      </div>
-      <a href="/signup" class="link">Não tem uma conta? Crie uma conta aqui!</a>
+<body>
+  <img src="img/loader.gif" class="loader" alt="">
+
+  <div class="alert-box">
+    <img src="img/error.png" class="alert-img" alt="">
+    <p class="alert-msg">Error</p>
   </div>
- 
+
+  <div class="container">
+    <img src="img/dark-logo.png" class="logo" alt="">
+    <div>
+      <form action="/login" method="POST">
+        <input type="text" autocomplete="off" id="name" placeholder="nome">
+        <input type="email" autocomplete="off" id="email" placeholder="email">
+        <input type="password" autocomplete="off" id="password" placeholder="senha">
+        <button class="submit-btn">Login</button>
+      </form>
+    </div>
+    <a href="/signup" class="link">Não tem uma conta? Crie uma conta aqui!</a>
+  </div>
+
   <script src="js/form.js"></script>
   <script src="js/login.js"></script>
-  
-  </body>
-  </html>
+
+</body>
+
+</html>
