--- a/Projeto-Clothing/views/login.ejs
+++ b/Projeto-Clothing/views/login.ejs
@@ -21,16 +21,14 @@
     <img src="img/dark-logo.png" class="logo" alt="">
     <div>
       <form action="/login" method="POST">
-        <input type="text" autocomplete="off" id="name" placeholder="nome">
-        <input type="email" autocomplete="off" id="email" placeholder="email">
-        <input type="password" autocomplete="off" id="password" placeholder="senha">
+        <input type="email" autocomplete="off" name="email" id="email" placeholder="email@examplo.com">
+        <input type="password" autocomplete="off" name="password" id="password" placeholder="senha">
         <button class="submit-btn">Login</button>
       </form>
     </div>
     <a href="/signup" class="link">Não tem uma conta? Crie uma conta aqui!</a>
   </div>
 
-  <script src="js/form.js"></script>
   <script src="js/login.js"></script>
 
 </body>
