--- a/Projeto-Clothing/views/cart.ejs
+++ b/Projeto-Clothing/views/cart.ejs
@@ -33,7 +33,7 @@
             <button class="counter-btn increment">+</button>
           </div>
           <p class="sm-price">R$135,00</p>
-          <button class="sm-delete-btn"><img src="img/close.png" alt=""></button>
+          <!--  <button class="sm-delete-btn"><img src="img/close.png" alt=""></button> -->
         </div>
       </div>
       <p class="section-heading">Sua lista de desejos</p>
