--- a/Projeto-Clothing/views/index.ejs
+++ b/Projeto-Clothing/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <title>Clothing - Melhor coleção de moda para a familia</title>
     <link rel="stylesheet" href="/css/home.css">
 </head>
+
 <body>
-    
+
     <!-- NAVEGADOR -->
     <nav class="navbar"></nav>
     <!-- END NAVEGADOR -->
@@ -226,7 +228,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">20% off</span>
-                    <img src="/img/bermuda-santa-cruz-classic-dot-stripe-moletom-preto-100980.jpeg" class="product-thumb" alt="">
+                    <img src="/img/bermuda-santa-cruz-classic-dot-stripe-moletom-preto-100980.jpeg"
+                        class="product-thumb" alt="">
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
@@ -261,7 +264,7 @@
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
                     <img src="./img/card9.png" class="product-thumb" alt="">
-                    <button class="card-btn">adicionar  á lista de desejos</button>
+                    <button class="card-btn">adicionar á lista de desejos</button>
                 </div>
                 <div class="product-info">
                     <h2 class="product-brand">Nike Shoes Lx</h2>
@@ -308,7 +311,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="/img/tenis-vans-old-skool-rosa-claro-branco-preto-99355.jpeg" class="product-thumb" alt="">
+                    <img src="/img/tenis-vans-old-skool-rosa-claro-branco-preto-99355.jpeg" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
@@ -320,7 +324,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">10% off</span>
-                    <img src="/img/tenis-vans-authentic-elastic-crayola-preto-colorido-106028.jpeg" class="product-thumb" alt="">
+                    <img src="/img/tenis-vans-authentic-elastic-crayola-preto-colorido-106028.jpeg"
+                        class="product-thumb" alt="">
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
@@ -332,7 +337,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag">0,5% off</span>
-                    <img src="/img/tenis-nike-sb-force-58-premium-rosa-preto-branco-106255.jpeg" class="product-thumb" alt="">
+                    <img src="/img/tenis-nike-sb-force-58-premium-rosa-preto-branco-106255.jpeg" class="product-thumb"
+                        alt="">
                     <button class="card-btn">adicionar à lista de desejo</button>
                 </div>
                 <div class="product-info">
@@ -361,8 +367,9 @@
     <footer></footer>
     <!-- END FOOTER -->
 
-    <script src="./js/nav.js"></script>
-    <script src="./js/home.js"></script>
-    <script src="./js/footer.js"></script>
+    <script src="/js/nav.js"></script>
+    <script src="/js/home.js"></script>
+    <script src="/js/footer.js"></script>
 </body>
+
 </html>
