--- a/Projeto-Clothing/views/login.ejs
+++ b/Projeto-Clothing/views/login.ejs
@@ -21,8 +21,8 @@
     <img src="img/dark-logo.png" class="logo" alt="">
     <div>
       <form action="/login" method="POST">
-        <input type="email" autocomplete="off" name="email" id="email" placeholder="email@examplo.com">
-        <input type="password" autocomplete="off" name="password" id="password" placeholder="senha">
+        <input type="email" autocomplete="off" name="email" id="email" placeholder="email@exemplo.com" required>
+        <input type="password" autocomplete="off" name="password" id="password" placeholder="senha" required>
         <button class="submit-btn">Login</button>
       </form>
     </div>
