--- a/Projeto-Clothing/views/product.ejs
+++ b/Projeto-Clothing/views/product.ejs
@@ -42,9 +42,9 @@
 
             </div>
 
-            <button class="btn 
-            cart-btn">Adicionar ao carrinho</button>
-            <button class="btn">adicionar a lista de desejos</button>
+            <button class="btn cart-btn">Adicionar ao carrinho</button>
+            <button class="btn-list">adicionar a lista de desejos</button>
+
         </div>
     </section>
     <!-- END PRODUCT DETAILS -->
