--- a/Projeto-Clothing/public/css/cart.css
+++ b/Projeto-Clothing/public/css/cart.css
@@ -111,8 +111,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 50%;
-    background: #fff;
+    border-radius: 20%;
+    background: rgb(161, 156, 156);
     border: 1px solid rgb(216, 216, 216);
     z-index: 2;
     cursor: pointer;
