--- a/Projeto-Clothing/public/css/product.css
+++ b/Projeto-Clothing/public/css/product.css
@@ -114,6 +114,20 @@
     text-transform: capitalize;
 }
 
+.btn-list {
+    width: 48%;
+    height: 64px;
+    padding: 18px;
+    border-radius: 5px;
+    background: none;
+    border: 2px solid #383838;
+    color: #383838;
+    font-size: 19px;
+    cursor: pointer;
+    margin: 20px 0;
+    text-transform: none;
+}
+
 .cart-btn {
     margin-right: 2%;
     background: #383838;
