--- a/Projeto-Clothing/views/signup.ejs
+++ b/Projeto-Clothing/views/signup.ejs
@@ -25,10 +25,13 @@
         <form action="/signup" method="POST">
             <img src="img/dark-logo.png" class="logo" alt="">
             <div>
-                <input type="text" autocomplete="off" name="nome" id="name" placeholder="digite seu nome">
-                <input type="email" autocomplete="off" name="email" id="email" placeholder="digite seu email">
-                <input type="number" autocomplete="off" name="cpf" id="CPF" placeholder="digite seu CPF">
-                <input type="password" autocomplete="off" name="password" id="password" placeholder="senha">
+                <input type="text" name="nome" id="name" placeholder="digite seu nome" required>
+                <input type="email" name="email" id="email" placeholder="digite seu email" required>
+                <input type="number" name="cpf" id="CPF" placeholder="digite seu CPF" required>
+                <input type="password" name="password" id="password" placeholder="senha" required>
+                <input type="text" name="telefone" id="telefone" placeholder="()00000-0000" required>
+                <!--  <input type="file" name="foto.png" id="foto">
+                <input type="date" name="data_criacao" id="data_criacao"> -->
 
                 <input type="checkbox" checked class="checkbox" id="terms-and-cond">
                 <label for="terms-and-cond">Concorda com os nossos <a href="">termos e
@@ -42,7 +45,7 @@
     <a href="/login" class="link">Já tem uma conta? Faça o log aqui</a>
     </div>
 
-    <script src="js/form.js"></script>
+    <script src=".js/signup.js"></script>
 
 </body>
 
